--- a/installer/css/style.css
+++ b/installer/css/style.css
@@ -30,7 +30,7 @@ a {
 		text-decoration: underline;
 	}
 
-.button {
+button {
 	font-size:1.4em;
 	padding:10px 20px 10px 20px;
 	width:100px; height:40px;
