--- a/installer/css/style.css
+++ b/installer/css/style.css
@@ -31,12 +31,24 @@ a {
 	}
 
 button {
-	font-size:1.4em;
-	padding:10px 20px 10px 20px;
-	width:100px; height:40px;
-	border:0px;
-	background-color:#03a9f4;
-	border-radius:20px ;
+  cursor: pointer;
+  color: black;
+  width: 300px;
+  height: 30px;
+  display: block;
+  margin: 0 auto;
+  border: solid 1px black;
+  background-color: #03a9f4;
+  border-radius: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: #2cb7f6;
+    box-shadow: 0px 15px 20px rgba(27, 39, 63, 0.4);
+    color: whitesmoke;
+    transform: translateY(-5px);
 }
 
 .topbanner {
