--- a/installer/css/style.css
+++ b/installer/css/style.css
@@ -30,7 +30,7 @@ a {
 		text-decoration: underline;
 	}
 
-button {
+.button {
 	padding:10px 15px 10px 15px;
 	min-width: 300px;
 	height: 40px;
@@ -41,10 +41,15 @@ button {
 	box-shadow: 0px -3px 3px #ffffff, 0px 3px 3px #cccccc;
 }
 
-button:hover {
-    background-color: #2cb7f6;
-    box-shadow: 0px -3px 3px #ffffff, 0px 3px 3px #cccccc;
-    color: whitesmoke;
+button {
+	padding:10px 15px 10px 15px;
+	min-width: 300px;
+	height: 40px;
+	border-radius: 20px;
+	font-size: 12px;
+	font-weight: 700;
+	background-color: #03a9f4;
+	box-shadow: 0px -3px 3px #ffffff, 0px 3px 3px #cccccc;
 }
 
 .topbanner {
