--- a/installer/css/style.css
+++ b/installer/css/style.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-
-:root {
-  --button-color: #ffffff;
-  --button-bg-color: #0d6efd;
-  --button-hover-bg-color: #025ce2;
-}
-
 body {
 	font-family: sans-serif;
 	margin: 0;
@@ -39,59 +31,15 @@ a {
 	}
 
 button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  
-  background: var(--button-bg-color);
-  color: var(--button-color);
-  
-  margin: 0;
-  padding: 0.5rem 1rem;
-  
-  font-family: 'Noto Sans KR', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  text-align: center;
-  text-decoration: none;
-  
-  border: none;
-  border-radius: 20px;
-  
-  display: inline-block;
-  width: auto;
-  
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  
-  cursor: pointer;
-  
-  transition: 0.5s;
-}
-
-button.success {
-  --button-bg-color: #28a745;
-  --button-hover-bg-color: #218838;
-}
-
-button.error {
-  --button-bg-color: #dc3545;
-  --button-hover-bg-color: #c82333;
-}
-
-button.warning {
-  --button-color: #212529;
-  --button-bg-color: #ffc107;
-  --button-hover-bg-color: #e0a800;
-}
-
-button:active,
-button:hover,
-button:focus {
-  background: var(--button-hover-bg-color);
-  outline: 0;
-}
-button:disabled {
-  opacity: 0.5;
+	padding:8px 15px 8px 15px;
+	min-width: 300px;
+	height: 40px;
+	border-radius: 20px;
+	font-size: 12px;
+	font-weight: 400;
+	background-color: #03a9f4;
+	color: #ffffff;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 .topbanner {
