--- a/installer/css/style.css
+++ b/installer/css/style.css
@@ -39,7 +39,7 @@ button {
 	font-weight: 400;
 	background-color: #03a9f4;
 	color: #ffffff;
-	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .topbanner {
